@@ -22,6 +22,7 @@ export(read.header)
 export(revd)
 export(rnorm.bivariate)
 export(scientific.notation)
+export(show.colour.palette)
 export(source.directory)
 export(str.cat)
 export(stripboxplot)
